# 20251007_task_kofi-_006

dance_event/berlin-dancemode-clone/: .gitignore  README.md
dance_event/berlin-dancemode-clone/backend/: Cargo.toml  README.md
dance_event/berlin-dancemode-clone/backend/src/database/: mod.rs
dance_event/berlin-dancemode-clone/backend/src/handlers/: auth.rs  events.rs  mod.rs  registrations.rs  users.rs  venues.rs
dance_event/berlin-dancemode-clone/backend/src/models/: mod.rs
dance_event/berlin-dancemode-clone/backend/src/routes/: mod.rs
dance_event/berlin-dancemode-clone/backend/src/utils/: auth.rs
dance_event/berlin-dancemode-clone/frontend/: index.html  package-lock.json  package.json  svelte.config.js  vite.config.js  vite.config.ts
dance_event/berlin-dancemode-clone/frontend/.routify/: config.js  routes.js  urlIndex.json
dance_event/berlin-dancemode-clone/frontend/src/: App.svelte  app.html
dance_event/berlin-dancemode-enhanced/backend/: Cargo.toml
dance_event/berlin-dancemode-enhanced/backend/data/dancemode.sled/: db  snap.0000000000001F21  snap.00000000000020AC  snap.0000000000004F8F
dance_event/berlin-dancemode-enhanced/backend/src/: main.rs
dance_event/berlin-dancemode-enhanced/backend/src/database/: mod.rs
dance_event/berlin-dancemode-enhanced/backend/src/handlers/: data.rs  events.rs  mod.rs  packages.rs  registrations.rs
dance_event/berlin-dancemode-enhanced/backend/src/routes/: mod.rs
dance_event/berlin-dancemode-enhanced/frontend/: clear_auth_fix.js  package-lock.json  package.json  rollup.config.js
(+42 files in other folders)
