[package]
name = "berlin-dancemode-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.8"
actix-cors = "0.7"
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sled = "0.34"
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
bcrypt = "0.15"
jsonwebtoken = "9.3"
env_logger = "0.11"
log = "0.4"
anyhow = "1.0"
thiserror = "1.0"
validator = { version = "0.18", features = ["derive"] }
stripe-rust = { version = "0.26", optional = true }
reqwest = { version = "0.12", features = ["json"] }

[features]
default = []
stripe = ["stripe-rust"]